<resources>
    <string name="app_name">FilmsInfo</string>
    <string name="film1Name">Ad Astra</string>
    <string name="film1Descr">The near future, a time when both hope and hardships drive humanity to look to the stars and beyond. While a mysterious phenomenon menaces to destroy life on planet Earth, astronaut Roy McBride undertakes a mission across the immensity of space and its many perils to uncover the truth about a lost expedition that decades before boldly faced emptiness and silence in search of the unknown.</string>
    <string name="film2Name">Sonic the Hedgehog</string>
    <string name="film2Descr">Based on the global blockbuster videogame franchise from Sega, Sonic the Hedgehog tells the story of the world’s speediest hedgehog as he embraces his new home on Earth. In this live-action adventure comedy, Sonic and his new best friend team up to defend the planet from the evil genius Dr. Robotnik and his plans for world domination.</string>
    <string name="film3Name">Jumanji: The Next Level</string>
    <string name="film3Descr">As the gang return to Jumanji to rescue one of their own, they discover that nothing is as they expect. The players will have to brave parts unknown and unexplored in order to escape the world’s most dangerous game.</string>
    <string name="film4Name">Breaking Bad</string>
    <string name="film4Descr">When Walter White,a chemistry teacher,is diagnosed with Stage 3 cancer and given a prognosis of only two years left to live.He becomes filled with a sense of fearlessness and an unrelenting desire to secure his family\'s financial future.</string>
    <string name="detail">Details</string>
    <string name="Like">Like</string>
    <string name="Poster">Film poster</string>
    <string name="share_button">Share button</string>
    <string name="Comment">Add your comments</string>
    <string name="Invite_button">"Invite "</string>
    <string name="content_descr">The poster of the film</string>
    <string name="change_theme">Themes</string>
    <string name="exit_dialog">Do you really want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="favorites">Favorites</string>
    <string name="films_list">Films list</string>
    <string name="favorites_menu">Favorites</string>
    <string name="settings">Settings</string>
    <string name="films_loading">Films loading…</string>
    <string name="errorMsg">Omg! :-(</string>
    <string name="retry">Retry</string>
    <string name="watch_later">Watch later</string>
    <string name="watch_later_desc">Watch later</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">FilmsInfo</string>
    <string name="available_in_the_full_version">Available in the full version</string>
</resources>
